# smt_logger

./: .gitignore  CMakeLists.txt  COPYING  README.md  install.sh
example/: CMakeLists.txt  main.cpp
include/: smt_logger.h
port/: install.sh
port/smt-logger/: CONTROL  portfile.cmake
source/: CMakeLists.txt  smt_logger.cpp
source/cmake/: smt-loggerConfig.cmake.in
source/include/smt-logger/: smt_logger.h
source/lib/: smt_logger.cpp
src/exe/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/cmake/: smt-logger-config.cmake.in  smt-logger.pc.in
src/lib/include/: smt_logger.h
src/lib/src/: smt_logger.cpp
test/: CMakeLists.txt  testcase.cpp
tests/: CMakeLists.txt  main.cpp  tests.h
